resolve errors during encoding of city and symptoms

--- a/apps/templates/home/AntibioticentryView.html
+++ b/apps/templates/home/AntibioticentryView.html
@@ -61,7 +61,7 @@
           </div>
         </div>
         <!-- Light table -->
-        <div class="table-responsive">
+        <div class="table-responsive" style="max-height: 600px;  overflow-y: auto; overflow-x: auto;">
           <table class="table align-items-center table-flush" style="border-collapse: collapse; margin: 0%; padding: 0%;">
             <thead>
               <tr>
@@ -97,6 +97,7 @@
     </div>
   </div>
 </div>
+
 {% endblock content %}
 
 {% block javascripts %}
