--- a/apps/templates/home/crf_form.html
+++ b/apps/templates/home/crf_form.html
@@ -359,12 +359,12 @@ label.form-control-label{
               </div>
                 <div class="col-lg-4">
                 <div class="form-group">
-                  <label class='form-control-label' for='Current_Province'>Province</label> {{form.Current_Province| append_attr:"class: form-control"|append_attr:"tabindex:22" }}
+                  <label class='form-control-label' for='Current_Province_fk'>Province</label> {{form.Current_Province_fk| append_attr:"class: form-control"|append_attr:"tabindex:22" }}
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="form-group">
-                  <label class='form-control-label' for='Current_City'>City</label> {{form.Current_City | append_attr:"class: form-control"|append_attr:"tabindex:23" }}
+                  <label class='form-control-label' for='Current_City_fk'>City</label> {{form.Current_City_fk | append_attr:"class: form-control"|append_attr:"tabindex:23" }}
                 </div>
               </div>
 
@@ -385,12 +385,12 @@ label.form-control-label{
               </div>
                 <div class="col-lg-4">
                 <div class="form-group">
-                  <label class='form-control-label' for='Permanent_Province'>Province</label> {{form.Permanent_Province| append_attr:"class: form-control"|append_attr:"tabindex:25" }}
+                  <label class='form-control-label' for='Permanent_Province_fk'>Province</label> {{form.Permanent_Province_fk| append_attr:"class: form-control"|append_attr:"tabindex:25" }}
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="form-group">
-                  <label class='form-control-label' for='Permanent_City'>City</label> {{form.Permanent_City| append_attr:"class: form-control"|append_attr:"tabindex:26" }}
+                  <label class='form-control-label' for='Permanent_City_fk'>City</label> {{form.Permanent_City_fk| append_attr:"class: form-control"|append_attr:"tabindex:26" }}
                 </div>
               </div>
 
@@ -1618,26 +1618,6 @@ label.form-control-label{
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-<!-- copy current address to permanent address -->
-<script>
-  document.getElementById('id_PermAdd_same_CurrAdd').addEventListener('change', function () {
-      const isChecked = this.checked;
-
-      const currentProvince = document.getElementById('id_Current_Province').value;
-      const currentCity = document.getElementById('id_Current_City').value;
-
-      const permanentProvinceField = document.getElementById('id_Permanent_Province');
-      const permanentCityField = document.getElementById('id_Permanent_City');
-
-      if (isChecked) {
-          permanentProvinceField.value = currentProvince;
-          permanentCityField.value = currentCity;
-      } else {
-          permanentProvinceField.value = '';
-          permanentCityField.value = '';
-      }
-  });
-</script>
 
 <!-- #calculate age -->
 <script>
@@ -1920,92 +1900,22 @@ label.form-control-label{
       }
     });
 
-    // for joining MIC and operand
+   
 
   }); // document ready closing
 </script>
 
 
 
-
-
-
-<!-- for province and cities -->
-<!-- <script>
-  $(document).ready(function () {
-    $('#id_Current_Province').change(function () {
-      var provinceId = $(this).val();
-      var citySelect = $('#id_Current_City');
-
-
-      citySelect.empty();  // Clear the current options
-
-      if (provinceId) {
-        $.ajax({
-          url: "{% url 'get_cities_by_province' %}",
-          data: {
-            'province_id': provinceId
-          },
-          success: function (data) {
-            citySelect.append($('<option>').text('*None').attr('value', ''));
-
-            $.each(data.cities, function (index, city) {
-              citySelect.append($('<option>').text(city.cityname).attr('value', city.id));
-
-            });
-          }
-        });
-      } else {
-        citySelect.append($('<option>').text('*None').attr('value', ''));
-
-      }
-    });
-  });
-</script> -->
-
-<!-- <script>
-  $(document).ready(function () {
-    $('#id_Permanent_Province').change(function () {
-      var provinceId = $(this).val();
-      var citySelect = $('#id_Permanent_City');
-
-
-      citySelect.empty();  // Clear the current options
-
-      if (provinceId) {
-        $.ajax({
-          url: "{% url 'get_cities_by_province' %}",
-          data: {
-            'province_id': provinceId
-          },
-          success: function (data) {
-            citySelect.append($('<option>').text('*None').attr('value', ''));
-
-            $.each(data.cities, function (index, city) {
-              citySelect.append($('<option>').text(city.cityname).attr('value', city.id));
-
-            });
-          }
-        });
-      } else {
-        citySelect.append($('<option>').text('*None').attr('value', ''));
-
-      }
-    });
-  });
-</script> -->
-
-
-
-<!-- <script>
+<script>
+  // grouping of cities by province
 $(function () {
-  const $curCountry = $('#id_Current_Country');
-  const $curProv    = $('#id_Current_Province');
-  const $curCity    = $('#id_Current_City');
+  const $curProv    = $('#id_Current_Province_fk');
+  const $curCity    = $('#id_Current_City_fk');
 
-  const $permCountry = $('#id_Permanent_Country');
-  const $permProv    = $('#id_Permanent_Province');
-  const $permCity    = $('#id_Permanent_City');
+
+  const $permProv    = $('#id_Permanent_Province_fk');
+  const $permCity    = $('#id_Permanent_City_fk');
 
   // Cache original province option lists so we can restore them
   const curProvOptions  = $curProv.html();
@@ -2023,7 +1933,7 @@ $(function () {
       setNone($prov).prop('disabled', true);
       setNone($city).prop('disabled', true);
     } else {
-      // Restore provinces and re-enable
+      // Restore provinces and re-enable  ## need to change this option to if already selected then copy
       $prov.html(originalProvHtml).prop('disabled', false);
       $city.empty().append($('<option>', { value: '', text: '*None' })).prop('disabled', false);
 
@@ -2065,34 +1975,47 @@ $(function () {
 
 
 
+
+
+
+
+<!-- copy current address to permanent address and also copy the current_city correctly -->
 <script>
   document.getElementById('id_PermAdd_same_CurrAdd').addEventListener('change', function () {
       const isChecked = this.checked;
 
-      const currentProvince = document.getElementById('id_Current_Province').value;
-      const currentCity = document.getElementById('id_Current_City').value;
+      const currentProvince = document.getElementById('id_Current_Province_fk').value;
+      const currentCity = document.getElementById('id_Current_City_fk').value;
 
-      const permanentProvinceField = document.getElementById('id_Permanent_Province');
-      const permanentCityField = document.getElementById('id_Permanent_City');
+      const permanentProvinceField = document.getElementById('id_Permanent_Province_fk');
+      const permanentCityField = document.getElementById('id_Permanent_City_fk');
 
       if (isChecked) {
-          // Copy province first
+          // Set province and trigger change to load cities
           permanentProvinceField.value = currentProvince;
-
-          // Trigger change event on permanentProvinceField to reload city options
-          let event = new Event('change', { bubbles: true });
-          permanentProvinceField.dispatchEvent(event);
-
-          // Delay setting the city until the city options are populated
-          setTimeout(() => {
+          if (typeof jQuery !== "undefined") {
+              $(permanentProvinceField).trigger('change');
+              // Wait for AJAX to finish and then set city
+              let tries = 0;
+              function setCityWhenReady() {
+                  tries++;
+                  if ([...permanentCityField.options].some(opt => opt.value == currentCity)) {
+                      permanentCityField.value = currentCity;
+                  } else if (tries < 10) {
+                      setTimeout(setCityWhenReady, 100);
+                  }
+              }
+              setCityWhenReady();
+          } else {
               permanentCityField.value = currentCity;
-          }, 300); // adjust delay if needed (depends on your population script)
+          }
       } else {
-          permanentProvinceField.value = '*None';
-          permanentCityField.value = '*None';
+          permanentProvinceField.value = '';
+          permanentCityField.value = '';
       }
   });
-</script> -->
+</script>
+
 
 {% endblock javascripts %}
 
